# plato

./: .env.local  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose-arm.yaml  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: tests.yml
Bruno/Compose/: Compose.bru  Example.bru
Bruno/Template/: Create Template.bru  Get.bru  List.bru  Update Template details.bru  Update Template.bru  folder.bru
app/: cli.py  deps.py  exceptions.py  file_storage.py  main.py  settings.py
app/.github/workflows/: tests.yml
app/compose/: __init__.py  renderer.py
app/db/: __init__.py  base.py  session.py
app/db/models/: template.py
app/models/: __init__.py  template.py
app/schemas/: compose.py  template_detail.py  template_detail_view.py
app/util/: path_util.py  setup_util.py
app/views/: template_detail_view.py
bruno/: bruno.json
bruno/Compose/: Compose.bru  Example.bru  folder.bru
bruno/Template/: Create Template.bru  Get.bru  List.bru  Update Template details.bru  Update Template.bru
migrations/: env.py
slate/source/: index.html.md
slate/source/includes/: introduction.md  quick_start.md  template.md  template_management.md
tests/: __init__.py  conftest.py  test_compose.py  test_file_storage.py  test_get_templates.py  test_management_templates.py  test_s3_application_set_up.py
tests/docker/: docker-compose.build.test.yml  docker-compose.local.test.yml
