[tool.poetry]
name = "plato"
version = "2023.5.2"
description = "Templating as a microservice"
authors = [
  "Tiago Santos <tiago.santos@vizidox.com>",
  "Joana Teixeira <joana.teixeira@vizidox.com>",
  "Hieu Le <hieu.le@morphotech.co.uk>",
  "Rita Mariquitos <rita.mariquitos@morphotech.co.uk>",
]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"

fastapi = { extras = ["standard"], version = "^0.115.13" }
pydantic-settings = "^2.10.0"
uvicorn = "^0.35.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.2"
jsonschema = "^4.24.0"

# S3
smart-open = { version = "6.3.0", extras = ["aws"] }

# Database
sqlalchemy = { version = "^2.0", extras = ["postgresql_psycopg2binary"] }

#HTTP
accept-types = "0.4.1"

# Templating
WeasyPrint = "52"
qrcode = { version = "6.1", extras = ["pil"] }
babel = "^2.9.1"
num2words = "0.5.10"

[tool.poetry.group.dev.dependencies]
pytest = "~8.4.1"
pytest-cov = "2.10.1"
pymupdf = "^1.26.1"
moto = { version = "5.1.8", extras = ["s3"] }
testcontainers = "3.7.1"
blinker = "1.4"
cyclonedx-bom = "^3.6"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
